+ student login, time/cap to student view

--- a/Frontend/staff.html
+++ b/Frontend/staff.html
@@ -82,46 +82,36 @@
         <progress value="22" max="30" style="color: #3E8EDE; border-radius: 25px;"></progress>
 
       </div>
+    </div>
 
-      <br><button style="margin: 1% 5%; width: 90%; font-family: Poppins;" type="button" class="btn btn-light">Add Student</button>
-      <table style="width:90%; text-align: center; margin: 1% 5%;">
-        <tr>
-          <th>Student Name</th>
-          <th colspan="2">Status</th>
-        </tr>
-        <tr>
-          <td>Ashley</td>
-          <td style="background-color: #9ee09e">Yes</td>
-          <td>No</td>
-        </tr>
-        <tr>
-          <td>Bob</td>
-          <td>Yes</td>
-          <td style="background-color:#ff6663">No</td>
-        </tr>
-        <tr>
-          <td>Christina</td>
-          <td style="background-color:#9ee09e">Yes</td>
-          <td>No</td>
-        </tr>
-        <tr>
-          <td>David</td>
-          <td>Yes</td>
-          <td style="background-color:#ff6663">No</td>
-        </tr>
-      </table>
-
-      <!-- Clicking buttons to add/minus from capacity. Click change, enter new max capacity number
-    <p>Time Slots: </p>
-    <div class="dropdown">
-      <button class="dropbtn">Available</button>
-      <div class="dropdown-content">
-        <a href="#">6:00-6:30 PM, Max Capacity: 30</a>
-        <a href="#">6:45-7:15 PM, Max Capacity: 30</a>
-        <a href="#">7:30-8:00 PM, Max Capacity: 30</a>
-        <a href="#">Add New Time Slot, Set Capacity</a>
-      </div>
-    </div> -->
+    <br><button style="margin: 1% 5%; width: 90%; font-family: Poppins;" type="button" class="btn btn-light">Add
+      Student</button>
+    <table style="width:90%; text-align: center; margin: 1% 5%;">
+      <tr>
+        <th>Student Name</th>
+        <th colspan="2">Status</th>
+      </tr>
+      <tr>
+        <td>Ashley</td>
+        <td style="background-color: #9ee09e">Yes</td>
+        <td>No</td>
+      </tr>
+      <tr>
+        <td>Bob</td>
+        <td>Yes</td>
+        <td style="background-color:#ff6663">No</td>
+      </tr>
+      <tr>
+        <td>Christina</td>
+        <td style="background-color:#9ee09e">Yes</td>
+        <td>No</td>
+      </tr>
+      <tr>
+        <td>David</td>
+        <td>Yes</td>
+        <td style="background-color:#ff6663">No</td>
+      </tr>
+    </table>
 </body>
 
 </html>
