--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <img style="width: 80%" src="img/bg-showcase-1.jpg">
         <br><br><br>
-        <a href="Frontend/time.html"><button type="button" class="btn btn-light">Book Reservation</button></a>
+        <a href="Frontend/studentlogin.html"><button type="button" class="btn btn-light">Book Reservation</button></a>
       </div>
     </div>
   </div>
