--- a/Frontend/time.html
+++ b/Frontend/time.html
@@ -36,10 +36,46 @@
                 $(this).find('input[type="text"]').focus();
             });
         });
+        function startTime() {
+            var today = new Date();
+            var h = today.getHours();
+            var m = today.getMinutes();
+            var s = today.getSeconds();
+            m = checkTime(m);
+            s = checkTime(s);
+            if (h > 12) { h -= 12 }
+            document.getElementById('txt').innerHTML =
+                h + ":" + m + ":" + s;
+            var t = setTimeout(startTime, 500);
+        }
+        function checkTime(i) {
+            if (i < 10) { i = "0" + i };  // add zero in front of numbers < 10
+            return i;
+        }
     </script>
     <style>
         .booktime {
             margin: 20px;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        /* Create two equal columns that floats next to each other */
+        .column {
+            float: left;
+            width: 50%;
+            padding: 10px;
+            height: 300px;
+            /* Should be removed. Only for demonstration */
+        }
+
+        /* Clear floats after the columns */
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
         }
     </style>
 </head>
@@ -48,7 +84,21 @@
     <a href="../../index.html"><button type="button" class="btn btn-light">Back</button></a>
 
     <div style="padding-left:16px; padding-bottom: 16px; text-align: center;">
-        <h2><strong>Available Time Slots</strong></h2>
+        <div class="row">
+            <div class="column">
+                <h2>Current Time</h2>
+
+                <body onload="startTime()">
+                    <div style="font-size: 100px" id="txt"></div>
+            </div>
+
+            <div class="column">
+                <h2>Current Capacity</h2>
+                <div style="font-size: 100px">22/30</div>
+                <progress value="22" max="30" style="color: #3E8EDE; border-radius: 25px;"></progress>
+
+            </div>
+        </div>
     </div>
 
     <div style="display: inline-block; font-size: medium;">6:00 - 6:30 PM</div>
@@ -89,52 +139,52 @@
     </div>
 
     <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-body">
-                <form>
-                    <div class="modal-header" style="font-size: large; font-weight: bolder;">
-                        Book Reservation for 6:30 - 6:45 PM
-                    </div>
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Name</label>
-                        <input type="text" class="form-control" id="recipient-name">
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                <a href="confirm.html"><button type="button" class="btn btn-success">Confirm
-                        Reservation</button></a>
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <form>
+                        <div class="modal-header" style="font-size: large; font-weight: bolder;">
+                            Book Reservation for 6:30 - 6:45 PM
+                        </div>
+                        <div class="form-group">
+                            <label for="recipient-name" class="col-form-label">Name</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                    <a href="confirm.html"><button type="button" class="btn btn-success">Confirm
+                            Reservation</button></a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-aria-hidden="true">
-<div class="modal-dialog" role="document">
-    <div class="modal-content">
-        <div class="modal-body">
-            <form>
-                <div class="modal-header" style="font-size: large; font-weight: bolder;">
-                    Book Reservation for 8:00 - 8:30 PM
+    <div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <form>
+                        <div class="modal-header" style="font-size: large; font-weight: bolder;">
+                            Book Reservation for 8:00 - 8:30 PM
+                        </div>
+                        <div class="form-group">
+                            <label for="recipient-name" class="col-form-label">Name</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label for="recipient-name" class="col-form-label">Name</label>
-                    <input type="text" class="form-control" id="recipient-name">
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                    <a href="confirm.html"><button type="button" class="btn btn-success">Confirm
+                            Reservation</button></a>
                 </div>
-            </form>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-            <a href="confirm.html"><button type="button" class="btn btn-success">Confirm
-                    Reservation</button></a>
+            </div>
         </div>
     </div>
-</div>
-</div>
 
 
 
