Move all UI assets under Frontend folder, and do not use nodemon and browsersync outside of local development

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -54,7 +54,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top" style="font-size: xx-large;">
     <div class="container">
-      <a class="navbar-brand"><img style="width: 30%" src="Frontend/img/tuftlogo.png"></a>
+      <a class="navbar-brand"><img style="width: 30%" src="img/tuftlogo.png"></a>
       <a><strong>Tufts University</strong></a>
     </div>
   </nav>
@@ -84,7 +84,7 @@
 
         <img style="width: 80%" src="img/bg-showcase-2.jpg">
         <br><br><br>
-        <a href="Frontend/stafflogin.html"><button type="button" class="btn btn-light">Login</button></a>
+        <a href="stafflogin.html"><button type="button" class="btn btn-light">Login</button></a>
       </div>
       <div class="column">
         <h2>Student</h2>
@@ -95,7 +95,7 @@
 
         <img style="width: 80%" src="img/bg-showcase-1.jpg">
         <br><br><br>
-        <a href="Frontend/studentlogin.html"><button type="button" class="btn btn-light">Book Reservation</button></a>
+        <a href="studentlogin.html"><button type="button" class="btn btn-light">Book Reservation</button></a>
       </div>
     </div>
   </div>
