--- a/Frontend/staff.html
+++ b/Frontend/staff.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
+<script src="student_registration.js"></script>
 <html>
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,28 +43,71 @@
       display: table;
       clear: both;
     }
-  </style>
-  <script>
-    function startTime() {
-      var today = new Date();
-      var h = today.getHours();
-      var m = today.getMinutes();
-      var s = today.getSeconds();
-      m = checkTime(m);
-      s = checkTime(s);
-      if (h > 12) { h -= 12 }
-      document.getElementById('txt').innerHTML =
-        h + ":" + m + ":" + s;
-      var t = setTimeout(startTime, 500);
+
+    /* Dropdown Button */
+    .dropbtn {
+      background-color: #79c7fa;
+      color: black;
+      padding: 16px;
+      font-size: 16px;
+      border: none;
+      cursor: pointer;
+      border-radius: 25px;
     }
-    function checkTime(i) {
-      if (i < 10) { i = "0" + i };  // add zero in front of numbers < 10
-      return i;
+
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+      position: relative;
+      display: inline-block;
     }
+
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #d3d5d7;
+      border-radius: 25px;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+
+    /* Links inside the dropdown */
+    .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      border-radius:25px;
+    }
+
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {background-color: grey}
+
+    /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+    .show {display:block;}
+      </style>
+      <script>
+        function startTime() {
+          var today = new Date();
+          var h = today.getHours();
+          var m = today.getMinutes();
+          var s = today.getSeconds();
+          m = checkTime(m);
+          s = checkTime(s);
+          if (h > 12) { h -= 12 }
+          document.getElementById('txt').innerHTML =
+            h + ":" + m + ":" + s;
+          var t = setTimeout(startTime, 500);
+        }
+        function checkTime(i) {
+          if (i < 10) { i = "0" + i };  // add zero in front of numbers < 10
+          return i;
+        }
   </script>
 </head>
 
-<body style="margin: 5% 5%; width: 90%; font-family: Poppins;">
+<body style="margin: 5% 5%; width: 90%; font-family: Poppins;" onload="startTime(); getTimeslot(); printNumberOfReservedStudents()">
   <a href="stafflogin.html"><button type="button" class="btn btn-light">Back</button></a>
 
   <div style="background-color: white; text-align: center;">
@@ -72,46 +115,27 @@
       <div class="column">
         <h2>Current Time</h2>
 
-        <body onload="startTime()">
+        
           <div style="font-size: 100px" id="txt"></div>
       </div>
 
-      <div class="column">
-        <h2>Current Capacity</h2>
-        <div style="font-size: 100px">22/30</div>
-        <progress value="22" max="30" style="color: #3E8EDE; border-radius: 25px;"></progress>
+      <div class="column" id="capacity">
+        
 
       </div>
     </div>
 
-    <br><button style="margin: 1% 5%; width: 90%; font-family: Poppins;" type="button" class="btn btn-light">Add
-      Student</button>
-    <table style="width:90%; text-align: center; margin: 1% 5%;">
-      <tr>
-        <th>Student Name</th>
-        <th colspan="2">Status</th>
-      </tr>
-      <tr>
-        <td>Ashley</td>
-        <td style="background-color: #9ee09e">Yes</td>
-        <td>No</td>
-      </tr>
-      <tr>
-        <td>Bob</td>
-        <td>Yes</td>
-        <td style="background-color:#ff6663">No</td>
-      </tr>
-      <tr>
-        <td>Christina</td>
-        <td style="background-color:#9ee09e">Yes</td>
-        <td>No</td>
-      </tr>
-      <tr>
-        <td>David</td>
-        <td>Yes</td>
-        <td style="background-color:#ff6663">No</td>
-      </tr>
-    </table>
+    <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">Select Timeslot</button>
+      <div id="myDropdown" class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+
+    <div id='timeslot'></div>
+
 </body>
 
 </html>
