--- a/Frontend/time.html
+++ b/Frontend/time.html
@@ -81,7 +81,7 @@
 </head>
 
 <body style="margin: 5% 5%; width: 90%"  onload="listTimeslots(); startTime(); printNumberOfReservedStudents()">
-    <a href="../../index.html"><button type="button" class="btn btn-light">Back</button></a>
+    <a href="studentlogin.html"><button type="button" class="btn btn-light">Back</button></a>
 
     <div style="padding-left:16px; padding-bottom: 16px; text-align: center;">
         <div class="row">
