--- a/Frontend/stafflogin.html
+++ b/Frontend/stafflogin.html
@@ -25,7 +25,7 @@
 </head>
 
 <body style="margin: 5% 5%; width: 90%;">
-    <a href="../../index.html"><button type="button" class="btn btn-light">Back</button></a> 
+    <a href="index.html"><button type="button" class="btn btn-light">Back</button></a> 
 
         <div class="imgcontainer">
             <img style="height: 0%;" src="img/tuftlogo.png" alt="Avatar" class="avatar">
@@ -40,7 +40,7 @@
         </div>
 
         <div class="container">
-            <a href="../../index.html"><button type="button" class="btn btn-light">Cancel</button></a> 
+            <a href="index.html"><button type="button" class="btn btn-light">Cancel</button></a> 
         </div>
 
 </body>
